[workspace]

members = [
    "crates/di",
    "crates/test-utils",
    "crates/behaviour/model/api",
    "crates/behaviour/model/impl",
    "crates/behaviour/service/api",
    "crates/behaviour/service/impl",
    "crates/config/api",
    "crates/config/model",
    "crates/config/impl",
    "crates/command/api",
    "crates/command/model",
    "crates/command/impl",
    "crates/dynamic-graph/api",
    "crates/dynamic-graph/impl",
    "crates/dynamic-graph/model",
    "crates/dynamic-graph/test",
    "crates/dynamic-graph/web",
    "crates/graph",
    "crates/graphql/schema",
    "crates/graphql/api",
    "crates/graphql/impl",
    "crates/graphql/test",
    "crates/graphql/web",
    "crates/instance-system/api",
    "crates/instance-system/impl",
    "crates/model/flow",
    "crates/plugin/api",
    "crates/plugin/delegates",
    "crates/plugin/derive",
    "crates/plugin/graphql/api",
    "crates/plugin/graphql/impl",
    "crates/plugin/graphql/schema",
    "crates/plugin/graphql/test",
    "crates/plugin/graphql/web",
    "crates/plugin/service/api",
    "crates/plugin/service/impl",
    "crates/remotes/api",
    "crates/remotes/impl",
    "crates/remotes/model",
    "crates/reactive/derive",
    "crates/reactive/model/api",
    "crates/reactive/model/impl",
    "crates/reactive/service/api",
    "crates/reactive/service/impl",
    "crates/lifecycle",
    "crates/runtime/api",
    "crates/runtime/impl",
    "crates/runtime/graphql/schema",
    "crates/runtime/graphql/api",
    "crates/runtime/graphql/impl",
    "crates/runtime/graphql/test",
    "crates/runtime/graphql/web",
    "crates/runtime/model",
    "crates/runtime/service/api",
    "crates/runtime/service/impl",
    "crates/runtime/service/test",
    "crates/runtime/web/api",
    "crates/runtime/web/impl",
    "crates/client",
    "crates/type-system/api",
    "crates/type-system/derive",
    "crates/type-system/impl",
    "crates/type-system/json-schema",
    "crates/type-system/rest",
    "crates/reactive-graph",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reactive-graph/reactive-graph"
homepage = "https://reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-http = { version = "3.9", features = ["rustls-0_23"] }
actix-rt = "2.10"
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-web-extras = "0.1"
# async-graphql features: uuid, chrono, url, log
async-graphql = { version = "7.0", features = ["uuid", "dynamic-schema"] }
async-graphql-actix-web = { version = "7.0" }
async-trait = "0.1"
async-std = { version = "1.10", features = ["attributes", "tokio1"] }
aws-lc-rs = "1.8.1"
clap = { version = "4.1", features = ["derive", "env"] }
clap-markdown = "0.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
config = "0.14.0"
convert_case = "0.6"
crossbeam = "0.8"
cynic = { version = "3.7", features = ["http-reqwest"], default-features = false }
darling = "0.20"
dashmap = { version = "6.0", features = ["serde"] }
default-test = "0.1"
futures = "0.3"
futures-await-test = "0.3"
futures-timer = "3.0"
futures-util = "0.3"
glob = "0.3.1"
gql_client = { version = "1.0.7", git = "https://github.com/reactive-graph/gql-client-rs.git", features = ["rustls-tls"], default-features = false }
http = "0.2"
json5 = "0.4"
lazy_static = "1.4.0"
libloading = "0.8"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
mime = "0.3"
notify = "6.0"
num_cpus = "1.15"
paste = "1.0"
path-tree = "0.8"
portpicker = "0.1.1"
proc-macro2 = "1.0"
query_interface = "0.3"
quote = "1.0"
rand = "0.8"
rand_derive2 = "0.1"
random-string = "1.0"
rayon = "1.6"
regex = "1.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-embed = { version = "8.0", features = ["debug-embed", "compression"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pki-types = "1.4.0"
rustls-pemfile = "2.1.1"
rustyline = "14.0"
schemars = { version = "0.8", features = ["uuid1"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellwords = "1.1"
signal-hook = "0.3.13"
similar = "2.2.1"
similar-asserts = "1.4.2"
springtime = "1.0"
springtime-di = { version = "1.0", features = ["threadsafe", "derive"] }
springtime-di-derive = "0.3"
stopwatch2 = "2.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
syn = { version = "2.0", features = ["full"] }
tabled = "0.16"
thiserror = "1.0"
tokio = { version = "1", features = ["time", "rt"] }
tokio-stream = "0.1"
toml = "0.8"
typed-builder = "0.20"
uuid = { version = "1.4", features = ["serde", "v4"] }
vergen = { version = "8.2" }
walkdir = "2.3"
wildmatch = "2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
