[package]
name = "inexor-rgf-behaviour"
description = "Inexor - Reactive Graph Flow - Reactive Behaviours"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-core-frp = { version = "0.10.0", path = "../core/frp" }
inexor-rgf-core-model = { version = "0.10.0", path = "../core/model" }
inexor-rgf-reactive = { version = "0.10.0", path = "../reactive" }

[dev-dependencies]
random-string = "1.0"

[lib]
crate-type = ["lib"]
