[package]
name = "reactive-graph-client"
description = "Inexor - Reactive Graph Flow - Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
chrono = { workspace = true }
cynic = { workspace = true, features = ["http-reqwest"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

##reactive-graph-config-model = { version = "0.10.0", path = "../config/model" }
reactive-graph-graph = { version = "0.10.0", path = "../graph" }
##reactive-graph-runtime-model = { version = "0.10.0", path = "../runtime/model" }
reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }

[dev-dependencies]
reactive-graph-runtime-api = { version = "0.10.0", path = "../runtime/api" }
reactive-graph-runtime-impl = { version = "0.10.0", path = "../runtime/impl" }
tokio = { workspace = true, features =  ["macros", "time", "rt", "rt-multi-thread", "test-util"] }

[lib]
crate-type = ["lib"]

[[example]]
name = "list_plugins"

[[example]]
name = "list_remotes"
