[package]
name = "reactive-graph-client"
description = "Reactive Graph - Client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
chrono = { workspace = true }
cynic = { workspace = true, features = ["http-reqwest"], default-features = false }
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-graph = { version = "0.10.0", path = "../graph" }
reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }
reactive-graph-plugin-model = { version = "0.10.0", path = "../plugin/model" }

[dev-dependencies]
itertools = { workspace = true }
reactive-graph-runtime-api = { version = "0.10.0", path = "../runtime/api" }
reactive-graph-runtime-impl = { version = "0.10.0", path = "../runtime/impl" }
reactive-graph-table-model = { version = "0.10.0", path = "../table-model" }
tokio = { workspace = true, features = ["macros", "time", "rt", "rt-multi-thread", "test-util"] }

[lib]
crate-type = ["lib"]

[[example]]
name = "list_plugins"

[[example]]
name = "list_remotes"

[[example]]
name = "list_components"

[[example]]
name = "list_component_type_ids"

[[example]]
name = "dump_components"
