[package]
name = "reactive-graph-di"
description = "Reactive Graph - DI"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
rustc-hash = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
springtime-di = { workspace = true, features = ["threadsafe", "derive"] }

[lib]
crate-type = ["lib"]

[lints]
workspace = true
