[package]
name = "reactive-graph-graph"
description = "Reactive Graph - Core - Model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
dashmap = { workspace = true, features = ["serde"] }
default-test = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_derive2 = { workspace = true, optional = true }
schemars = { workspace = true, features = ["uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
wildmatch = { workspace = true }

reactive-graph-test-utils = { version = "0.10.0", path = "../test-utils", optional = true }

[dev-dependencies]
default-test = { workspace = true }
random-string = { workspace = true }
rand = { workspace = true }
rand_derive2 = { workspace = true }

reactive-graph-test-utils = { version = "0.10.0", path = "../test-utils" }

[features]
test = ["default-test", "rand", "rand_derive2", "reactive-graph-test-utils"]

[lib]
crate-type = ["lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
