[package]
name = "reactive-graph-graph"
description = "Reactive Graph - Core - Model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
const_format = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
default-test = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_derive3 = { workspace = true, optional = true }
schemars = { workspace = true, features = ["uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
wildmatch = { workspace = true }

reactive-graph-utils-test = { version = "0.10.0", path = "../utils/test", optional = true }

[dev-dependencies]
default-test = { workspace = true }
#random-string = { workspace = true }
rand = { workspace = true }
rand_derive3 = { workspace = true }

reactive-graph-utils-test = { version = "0.10.0", path = "../utils/test" }

[features]
test = ["default-test", "rand", "rand_derive3", "reactive-graph-utils-test"]

[lib]
crate-type = ["lib"]

[lints]
workspace = true
