[package]
name = "inexor-rgf-core-di-codegen"
description = "Inexor - Reactive Graph Flow - Dependency Injection - Macro"
version = "2.0.0"
authors = [
    "dmitryb.dev@gmail.com",
    "Andreas Schaeffer <hanack@nooblounge.net>"
]
edition = "2021"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/inexorgame/inexor-rgf-core-di"

[dependencies]
quote = "1.0"
regex = "1.6"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ] }

[lib]
proc-macro = true

[features]
async = []
