[package]
name = "reactive-graph-lifecycle"
description = "Reactive Graph - Lifecycle"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }

[lib]
crate-type = ["lib"]
