[package]
name = "inexor-rgf-plugin-derive"
description = "Inexor - Reactive Graph Flow - Plugin - Derive Macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = [ "full" ] }

inexor-rgf-graph = { version = "0.10.0", path = "../graph" }

[features]
default = [ "json" ]
json = []
json5 = []
toml = []
full = [ "json", "json5", "toml" ]

[lib]
proc-macro = true
