[package]
name = "reactive-graph"
description = "Reactive Graph Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[package.metadata.deb]
name = "reactive-graph"
maintainer-scripts = "debian/maintainer-scripts"
assets = [
    ["target/release/reactive-graph", "usr/bin/reactive-graph", "755"],
    ["../../README.md", "usr/share/doc/reactive-graph/README", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/reactive-graph/CHANGELOG", "644"],
    ["../../CODE_OF_CONDUCT.md", "usr/share/doc/reactive-graph/CODE_OF_CONDUCT", "644"],
    ["../../LICENSE.md", "usr/share/doc/reactive-graph/LICENSE", "644"],
    ["../../CONTRIBUTING.md", "usr/share/doc/reactive-graph/CONTRIBUTING", "644"],
    ["debian/etc/reactive-graph/var_file", "etc/reactive-graph/default/var_file", "644"],
    ["debian/etc/reactive-graph/graphql.toml", "etc/reactive-graph/default/graphql.toml", "644"],
    ["debian/etc/reactive-graph/instance.toml", "etc/reactive-graph/default/instance.toml", "644"],
    ["debian/etc/reactive-graph/logging.toml", "etc/reactive-graph/default/logging.toml", "644"],
    ["debian/etc/reactive-graph/plugins.toml", "etc/reactive-graph/default/plugins.toml", "644"],
    ["debian/usr/share/reactive-graph/plugins/deploy/.gitkeep", "usr/share/reactive-graph/default/plugins/deploy/.gitkeep", "644"],
    ["debian/usr/share/reactive-graph/plugins/installed/.gitkeep", "usr/share/reactive-graph/default/plugins/installed/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/repositories/flows/.gitkeep", "var/lib/reactive-graph/default/repositories/flows/.gitkeep", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "reactive-graph@"
enable = true
restart-after-upgrade = true

[dependencies]
actix-web = { workspace = true, features = ["rustls-0_22"] }
clap = { workspace = true, features = ["derive", "env"] }
colored = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
rustyline = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellwords = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt", "rt-multi-thread"] }

reactive-graph-config-model = { version = "0.10.0", path = "../config/model" }
reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }
reactive-graph-graph = { version = "0.10.0", path = "../graph" }
reactive-graph-runtime-model = { version = "0.10.0", path = "../runtime/model" }
reactive-graph-runtime-api = { version = "0.10.0", path = "../runtime/api" }
reactive-graph-runtime-impl = { version = "0.10.0", path = "../runtime/impl" }
reactive-graph-client = { version = "0.10.0", path = "../client", optional = true }

[features]
client = ["reactive-graph-client"]
default = ["client"]

[[bin]]
name = "reactive-graph"
